--add-opens vm flag